用户管理，角色管理，数据字典，生产工艺，生产路线

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -42,3 +42,12 @@
     display: block
   }
 }
+
+.el-table th.gutter{
+  display: table-cell!important;
+  border-bottom: 1px solid #dfe6ec;
+}
+.el-table colgroup.gutter {
+  display: table-cell !important;
+}
+
