重卷、轧机、退火、精整拉矫报工，统一生产班报告管理

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -51,3 +51,8 @@
   display: table-cell !important;
 }
 
+.el-table--striped .el-table__body tr.el-table__row--striped.current-row td, .el-table__body tr.current-row>td {
+  //color: #fff;
+  font-weight: bold;
+  background-color: #E0EEEE!important;
+}
